syntax = "proto3";

package io.rsocket.springone.demo;

option java_package = "io.rsocket.springone.demo";
option java_outer_classname = "ServiceProto";
option java_multiple_files = true;

service DepositService {}

service WithdrawalService {}

service RecordsService {
    rpc records (RecordsRequest) returns (stream Record) {}
}

service TournamentService {
    rpc tournament (RecordsRequest) returns (stream RoundResult) {}
}

service RankingService {
    rpc rank (stream RankingRequest) returns (stream Record) {}
}

message RecordsRequest {
    int32 offset = 1;
    int32 maxResults = 2;
}

message RoundResult {
    int32 round = 1;
    Record winner = 2;
}

message RankingRequest {
    repeated Record records = 1;
}

message Record {
    int32 id = 1;
    repeated string aliases = 2;
    repeated string authors = 3;
    string name = 4;
    string description = 5;
    string background = 6;
    string thumbnail = 7;
    repeated string partners = 8;
    repeated string powers = 9;
    int32 comicCount = 10;
    int32 eventCount = 11;
    int32 pageviewCount = 12;
    int32 serieCount = 13;
    int32 storyCount = 14;
    repeated string secretIdentities = 15;
    repeated string species = 16;
    string superName = 17;
    repeated string teams = 18;
    string marvelUrl = 19;
    string wikipediaUrl = 20;
}